--- a/react-test/public/index.html
+++ b/react-test/public/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+	Strata by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Thales Biancalana</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
